# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main.yml
.github/рабочие процессы/: main.yaml
gendiff/: __init__.py  cli.py  generate_diff.py  generator_diff.py  maker_diff.py  parser.py
gendiff/formatters/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendif.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/correct/: correct_diff.txt  correct_json.json  correct_plain.txt  correct_stylish.txt
