[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Софья Григорович <sonyashkin@icloud.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10.9"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendif:main"
