[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This CLI utility allows you to show changes in json and yaml files"
authors = ["Софья Григорович <sonyashkin@icloud.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/unt1tledd/python-project-50.git"
classifiers = [
"Programming Language :: Python :: 3.10",
"Framework :: Pytest"]

[tool.poetry.dependencies]
python = "^3.10.4"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
